2022-10-24T00:49:41Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3309225425 # 557
* notice: last 14d: unq all: 40 5716
* notice: prev accum: outdated-unq outdated-all / unq all: 1119 75473 / 1190 81121
* notice: next accum: outdated-unq outdated-all / unq all: 1121 75881 / 1190 81597
* notice: prev exec diff / last date diff / accum: unq all: +0 +148 -0 -15 / +2 +407 -0 -0 / 2 407
* notice: removed / changed dates: [2022-10-09] / [2022-10-10 2022-10-23]

2022-10-23T16:08:36Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3307724264 # 556
* notice: last 14d: unq all: 40 5648
* notice: prev accum: outdated-unq outdated-all / unq all: 1119 75473 / 1190 81147
* notice: next accum: outdated-unq outdated-all / unq all: 1119 75473 / 1190 81121
* notice: prev exec diff / last date diff / accum: unq all: +0 +121 -0 -147 / +2 +259 -0 -0 / 2 259
* notice: removed / changed dates: [] / [2022-10-09 2022-10-23]

2022-10-23T08:08:14Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3306336978 # 555
* notice: last 14d: unq all: 40 5674
* notice: prev accum: outdated-unq outdated-all / unq all: 1119 75473 / 1188 81188
* notice: next accum: outdated-unq outdated-all / unq all: 1119 75473 / 1190 81147
* notice: prev exec diff / last date diff / accum: unq all: +2 +138 -0 -179 / +2 +138 -0 -0 / 2 138
* notice: removed / changed dates: [] / [2022-10-09 2022-10-23]

2022-10-23T00:42:40Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3305263199 # 554
* notice: last 14d: unq all: 40 5715
* notice: prev accum: outdated-unq outdated-all / unq all: 1116 75063 / 1188 80715
* notice: next accum: outdated-unq outdated-all / unq all: 1119 75473 / 1188 81188
* notice: prev exec diff / last date diff / accum: unq all: +0 +148 -0 -17 / +3 +408 -0 -0 / 3 408