@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-24T00:49:41Z",
-  "count" : 386,
+  "timestamp" : "2022-10-24T08:18:25Z",
+  "count" : 207,
   "count_minmax" : [ 136, 401 ],
-  "count_decinc" : [ -15, +401 ],
+  "count_decinc" : [ -194, +401 ],
   "uniques" : 2,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -0, +2 ]
