@@ -1,0 +1,9 @@
+{
+  "timestamp" : "2022-10-24T08:18:25Z",
+  "count" : 128,
+  "count_minmax" : [ 128, 128 ],
+  "count_decinc" : [ -0, +128 ],
+  "uniques" : 2,
+  "uniques_minmax" : [ 2, 2 ],
+  "uniques_decinc" : [ -0, +2 ]
+}
