@@ -1,10 +1,10 @@
 {
-  "count": 5716,
+  "count": 5665,
   "uniques": 40,
   "clones": [
     {
       "timestamp": "2022-10-10T00:00:00Z",
-      "count": 386,
+      "count": 207,
       "uniques": 2
     },
     {
@@ -70,6 +70,11 @@
     {
       "timestamp": "2022-10-23T00:00:00Z",
       "count": 407,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2022-10-24T00:00:00Z",
+      "count": 128,
       "uniques": 2
     }
   ]
