@@ -1,3 +1,11 @@
+2022-10-24T08:18:25Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3311097505 # 558
+* notice: last 14d: unq all: 40 5665
+* notice: prev accum: outdated-unq outdated-all / unq all: 1121 75881 / 1190 81597
+* notice: next accum: outdated-unq outdated-all / unq all: 1121 75881 / 1192 81546
+* notice: prev exec diff / last date diff / accum: unq all: +2 +128 -0 -179 / +2 +128 -0 -0 / 2 128
+* notice: removed / changed dates: [] / [2022-10-10 2022-10-24]
+
 2022-10-24T00:49:41Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3309225425 # 557
 * notice: last 14d: unq all: 40 5716
